Fix table forced alignment

--- a/jet/static/jet/css/_table.scss
+++ b/jet/static/jet/css/_table.scss
@@ -116,9 +116,12 @@
         border-bottom: 0;
       }
 
+      & th {
+        text-align: left;
+      }
+
       & th, & td {
         padding: 8px;
-        text-align: left;
         font-size: 13px;
 
         &.action-checkbox {
